// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircleBadge CircleBadge.Icon renders consistently 1`] = `
.c0 {
  height: auto;
  max-width: 60%;
  max-height: 55%;
}

<svg
  aria-hidden="true"
  className="c0"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<path fill-rule=\\"evenodd\\" d=\\"M13.78 4.22a.75.75 0 010 1.06l-7.25 7.25a.75.75 0 01-1.06 0L2.22 9.28a.75.75 0 011.06-1.06L6 10.94l6.72-6.72a.75.75 0 011.06 0z\\"></path>",
    }
  }
  fill="currentColor"
  height={16}
  role="img"
  style={
    Object {
      "display": "inline-block",
      "userSelect": "none",
      "verticalAlign": "text-bottom",
    }
  }
  viewBox="0 0 16 16"
  width={16}
/>
`;

exports[`CircleBadge renders consistently 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #fff;
  border-radius: 50%;
  box-shadow: 0 3px 6px rgba(149,157,165,0.15);
  width: 96px;
  height: 96px;
}

<div
  className="c0"
>
  <img
    alt=""
    src="primer.jpg"
  />
</div>
`;

exports[`CircleBadge respects the inline prop 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #fff;
  border-radius: 50%;
  box-shadow: 0 3px 6px rgba(149,157,165,0.15);
  width: 96px;
  height: 96px;
}

<div
  className="c0"
/>
`;

exports[`CircleBadge respects the variant prop 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #fff;
  border-radius: 50%;
  box-shadow: 0 3px 6px rgba(149,157,165,0.15);
  width: 128px;
  height: 128px;
}

<div
  className="c0"
/>
`;

exports[`CircleBadge uses the size prop to override the variant prop 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #fff;
  border-radius: 50%;
  box-shadow: 0 3px 6px rgba(149,157,165,0.15);
  width: 20px;
  height: 20px;
}

<div
  className="c0"
  size={20}
/>
`;
